test: fix stubbing issues